--- a/style.css
+++ b/style.css
@@ -1,15 +1,4 @@
 body {
-	background: #ffffff;
-	color: #000000;
-	font-size:15pt;
-	font-family:Helvetica; 
-
 }
 
-h1 {
-	width: 50%;
-	height: 30%;
-	margin: auto;
-	text-align: center;
-
-}
+h1 { color: #7a7c7f; font-size: 30px; font-family: "Libre Baskerville", serif; line-height: 45px; text-align: center; text-shadow: 0 1px 1px #fff; padding-top: 30%; }
