--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
 }
 
-h1 { color: #7a7c7f; font-size: 30px; font-family: "Libre Baskerville", serif; line-height: 45px; text-align: center; text-shadow: 0 1px 1px #fff; padding-top: 30%; }
+p { color: #7a7c7f; font-size: 30px; font-family: "Libre Baskerville", serif; line-height: 45px; text-align: center; text-shadow: 0 1px 1px #fff; padding-top: 30%; }
+
