--- a/style.css
+++ b/style.css
@@ -3,3 +3,4 @@ body {
 
 p { color: #7a7c7f; font-size: 30px; font-family: "Libre Baskerville", serif; line-height: 45px; text-align: center; text-shadow: 0 1px 1px #fff; padding-top: 30%; }
 
+.bigger {font-size:200%; color: #ff0000;}
